<resources>
    <string name="app_name">Project Manager</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Your Projects</string>
    <string name="second_fragment_label">Create Project</string>
    <string name="third_fragment_label">See Tasks</string>
    <string name="about">About</string>
    <string name="next">Next</string>
    <string name="finished">Done</string>
    <string name="num_members">0 members</string>
    <string name="num_of_tasks">0 of 6 tasks complete</string>
    <string name="project_name">Project Name</string>
    <string name="title_create_project">Create Project</string>
    <string name="enter_project_name">Enter project name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="welcome">Here are your projects</string>
    <string name="weather">%1$s %2$.1f C</string>
    <string name="wifi_not_enabled">\nWi-Fi not enabled</string>
    <string name="enter_person_first_name">First name</string>
    <string name="enter_person_last_name">Last name</string>
    <string name="title_add_person">Add People</string>
    <string name="title_set_skill_level">Set Skill Level</string>
    <string name="confirm_person">Add</string>
    <string name="no_projects">Looks like you have no projects yet
        :(\nTap below to add one.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="skill_level">0</string>
    <string name="members"> Members</string>
    <string name="exit_web_view_details">TAP WEATHER TO EXIT</string>
    <string name="okay"> Okay</string>
    <string name="about_app_dialog">The purpose of this application is to allow a user to create a
        list of projects with their own teams and add different tasks to these projects.</string>

    <!--    <string name="your_project_welcome">Your Projects!</string>-->
    <string name="project_view">Project</string>

    <!--    <string name="your_project_welcome">Your Projects!</string>-->
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start_date_view">Start Date</string>
    <string name="end_date_view">End Date</string>
    <string name="task_name">Task Name</string>
    <string name="insert_task">INSERT</string>
    <string name="back_button_tasks">BACK</string>
    <string name="complete_task_string">COMPLETE</string>
    <string name="add_contact">Add \n Contact</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="youve_got">You\'ve Got</string>
    <string name="got_projects">projects!</string>
    <string name="zero">0</string>
    <string name="got_no_projects">no projects:(</string>
    <string name="new_project">Add</string>

</resources>
