<?xml version="1.0" encoding="utf-8"?>
<!--
FILENAME      : create_new_project_widget.xml
PROJECT       : PROG3150 - Assignment 4
PROGRAMMER    : Aaron Perry, Daniel Grew, John Stanley, Manthan Rami, Sasha Malesevic
FIRST VERSION : 2020-03-14
DESCRIPTION   : This xml file contains the UI layout for the app widget.-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appwidget_preview_background"
    android:padding="@dimen/widget_margin">

    <Button
        android:id="@+id/button_for_text2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_above="@+id/appwidget_button"
        android:layout_marginBottom="15dp"
        android:background="@color/appwidget_preview_background"
        android:clickable="false"
        android:text="@string/got_projects"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_for_text"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/appwidget_preview_background"
        android:clickable="false"
        android:text="@string/youve_got"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <Button
        android:id="@+id/appwidget_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimaryDark"
        android:shadowColor="#00008EE1"
        android:text="@string/new_project"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

    <Button
        android:id="@+id/appwidget_count"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_for_text2"
        android:layout_below="@id/button_for_text"
        android:clickable="false"
        android:text="@string/zero"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:layout_below="@id/button_for_text" />

</RelativeLayout>