<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProjectFragment">

    <Button
        android:id="@+id/button_third"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="16dp"
        android:text="@string/finished"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_Project_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/enter_project_name"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_Start_Date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/editText_End_Date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Project_Name"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText_End_Date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_Start_Date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText_Start_Date"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView_Start_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        app:layout_constraintBottom_toTopOf="@+id/editText_Start_Date"
        app:layout_constraintStart_toStartOf="@+id/editText_Start_Date" />

    <TextView
        android:id="@+id/textView_End_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        app:layout_constraintBottom_toTopOf="@+id/editText_End_Date"
        app:layout_constraintStart_toStartOf="@+id/editText_End_Date" />

    <TextView
        android:id="@+id/textView_Create_Project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_project_name"
        app:layout_constraintBottom_toTopOf="@+id/editText_Project_Name"
        app:layout_constraintEnd_toEndOf="@+id/editText_Project_Name"
        app:layout_constraintStart_toStartOf="@+id/editText_Project_Name" />

</androidx.constraintlayout.widget.ConstraintLayout>